# ytui_music

./: .SRCINFO  .gitignore  PKGBUILD  QWEN.md  README.md  pyproject.toml  requirements.txt  yt.py
css/: styles.tcss
player/: __init__.py  audio.py
utils/: __init__.py  search.py  thumbnails.py
widgets/: __init__.py  controls.py  search_result.py  thumbnail.py
